[package]
name = "ddnet-discordbot"
version = "0.1.0"
authors = ["Learath2 <learath2@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
lazy_static = "1.4.0"
num-traits = "0.2"
chrono = "0.4"
dotenv = "0.15.0"
futures = "0.3"
twilight-cache-inmemory = "0.4"
twilight-gateway = "0.4"
twilight-http = "0.4"
twilight-model = "0.4"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite", "migrate", "macros", "chrono" ] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.5.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
prettytable-rs = "^0.8"
