[package]
name = "ddnet-discordbot"
version = "0.1.0"
authors = ["Learath2 <learath2@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
atomic = "0.5"
lazy_static = "1.4.0"
num-derive = "0.3"
num-traits = "0.2"
chrono = "0.4"
dotenv = "0.15.0"
futures = "0.3"
twilight-cache-inmemory = "0.5"
twilight-gateway = "0.5"
twilight-http = { version = "0.5", features = [ "tracing" ] }
twilight-model = "0.5"
twilight-mention = "0.5"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite", "migrate", "macros", "chrono" ] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.5.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
prettytable-rs = "^0.8"
either = "1.6"
